# Kinova_DualArm

./: README.md
rpp_data/config/bt_task_manager/: task_grasp.yaml
rpp_data/config/rpp/: SLAM_PLAN.config
rpp_data/config/rviz/: rpp_grasp.rviz  rpp_navigation.rviz  rpp_navigation_dwa.rviz  rpp_navigation_teb.rviz
rpp_data/config/voice/: voice_pose.json
rpp_data/map/fast_lio_sam/: map.yaml  poses.txt
rpp_docs/brav-7601-S002_asm/: brav-7601-S002_asm.html
rpp_docs/北航交付文档/: 说明文档.md
rpp_docs/北航交付文档/俯仰电机/: README.md  俯仰电机协议.xlsx
rpp_docs/北航交付文档/升降电机/: README.md
rpp_docs/北航交付文档/机械臂/: kinova-gen3快速使用.pptx
rpp_tools/pointcloud_to_2dmap/: CMakeLists.txt
rpp_tools/pointcloud_to_2dmap/src/: pointcloud_to_2dmap.cpp
rpp_tools/rpp_easy_tools/gen_bin/: rpp_add_apt_repository  rpp_add_text  rpp_add_user_to_group  rpp_apt_install  rpp_apt_install_local  rpp_apt_install_rospackage  rpp_apt_update  rpp_auto_login  rpp_base_generate  rpp_change_apt_source  rpp_change_pip_source  rpp_check_config  rpp_check_ros_activate  rpp_compiler_ros1_ws  rpp_compiler_ros2_ws  rpp_create_empty_folder  rpp_create_ros1_ws  rpp_create_ros2_ws  rpp_desktop  rpp_display_env_var  rpp_easy_tools_environment  rpp_find_path  rpp_get_ros_distro  rpp_install_cuda_11_4  rpp_install_cuda_12_6  rpp_install_cudnn_8_4  rpp_install_nvidia  rpp_install_opencv_cuda_4_5_5  rpp_install_pycuda_2021_1  rpp_install_ros1  rpp_install_ros2  rpp_install_tensorrt_8_4  rpp_librealsense_install  rpp_log  rpp_log_from_pipe  rpp_network_config  rpp_nx_base_generate  rpp_pip_install  rpp_power_config  rpp_product_generate  (+9 more)
rpp_tools/rpp_fast_migrate_record/: rpp_fast_migrate_record.desktop
rpp_tools/starterbutton/: starterButton.desktop
rpp_tools/starterbutton/.bin/: bt_cancel.sh  (+49 more)
rpp_ws/install/: local_setup.sh  setup.sh
rpp_ws/log/: latest_build
rpp_ws/src/application/bt_task_manager_ros2/: package.xml  readme.md  setup.cfg  setup.py
rpp_ws/src/application/bt_task_manager_ros2/bt_task_manager_ros2/: moveit_gripper.py  rb_decorators.py
rpp_ws/src/application/bt_task_manager_ros2/bt_task_manager_ros2/examples/: ex_chassis_move.py  ex_get_grasp_pose.py  ex_moveit_arm.py  ex_moveit_gripper.py  ex_navigation.py  test.py
rpp_ws/src/application/bt_task_manager_ros2/bt_task_manager_ros2/scripts/: aruco_detector_node.py  controller_node.py  grasp_node.py  test.py
rpp_ws/src/application/bt_task_manager_ros2/config/: camera.yaml  camera_calibration.yaml  grasp_node.yaml  moveit_arm_configs.yaml  moveit_gripper_configs.yaml  task_grasp.yaml  test.yaml
rpp_ws/src/application/bt_task_manager_ros2/install/: local_setup.sh  setup.sh
rpp_ws/src/application/bt_task_manager_ros2/install/bt_task_manager_ros2/lib/bt_task_manager_ros2/: arm  aruco_detector_node  chassis  controller_node  grasp_node  gripper  moveit_arm  navigation  test
rpp_ws/src/application/bt_task_manager_ros2/install/bt_task_manager_ros2/share/bt_task_manager_ros2/: package.bash  package.dsv  package.ps1  package.sh
rpp_ws/src/application/bt_task_manager_ros2/install/bt_task_manager_ros2/share/bt_task_manager_ros2/config/: aruco_detector_node.yaml  controller_node.yaml
rpp_ws/src/application/bt_task_manager_ros2/install/bt_task_manager_ros2/share/bt_task_manager_ros2/launch/: aruco_detector_node.launch.py  aruco_single.launch.py  controller_node.launch.py  grasp_bringup.launch.py  grasp_node.launch.py  hand_eye_calibration.launch.py
rpp_ws/src/application/bt_task_manager_ros2/launch/: camera_calibration.launch.py  test.launch.py
rpp_ws/src/application/bt_task_manager_ros2/log/: latest_build
rpp_ws/src/application/xf_voice/: CMakeLists.txt  package.xml
rpp_ws/src/application/xf_voice/config/: tts_params.yaml  voice_control.yaml
rpp_ws/src/application/xf_voice/include/xf_voice/: linuxrec.h  msp_cmn.h  qise.h  qisr.h  qtts.h
rpp_ws/src/application/xf_voice/launch/: dialog_launch.py  iat_launch.py  tts_only_launch.py  work.launch.py
rpp_ws/src/application/xf_voice/src/iat_online_record_sample/: iat_online_record_node.cpp  linuxrec.c  speech_recognizer.c
rpp_ws/src/application/xf_voice/src/tts_online_sample/: tts_online_node.cpp
rpp_ws/src/application/xf_voice/src/voice_control/: match_demo.py  robot_state.py
rpp_ws/src/application/xf_voice/src/xf_voice/: setup.py  voice_dialog_node.py
rpp_ws/src/application/xf_voice_msgs/: CMakeLists.txt
rpp_ws/src/drivers/motor_lift_sdk/: CMakeLists.txt  README.md
rpp_ws/src/drivers/motor_lift_sdk/examples/: keyboard_teleoperate.cpp
rpp_ws/src/drivers/motor_lift_sdk/include/motor_lift/: can_motor.h
rpp_ws/src/drivers/motor_lift_sdk/src/: can_motor.cpp
rpp_ws/src/drivers/rpp_msgs/: CMakeLists.txt
rpp_ws/src/drivers/rpp_msgs/msg/: BatteryState.msg  ErrorState.msg  LightState.msg  SetDevice.msg  SetErrorMask.msg  SingleMotorState.msg
rpp_ws/src/drivers/rpp_ros_driver/: CMakeLists.txt  package.xml
rpp_ws/src/drivers/rpp_ros_driver/include/rpp_ros_driver/: rpp_ros_driver.h
rpp_ws/src/drivers/rpp_ros_driver/launch/: driver.launch.py  joy_teleop.launch.py
rpp_ws/src/drivers/rpp_ros_driver/src/: main.cpp  rpp_ros_driver.cpp
rpp_ws/src/drivers/serial/: CMakeLists.txt  README.md
rpp_ws/src/drivers/wheeltec_mic/wheeltec_mic_ros2/: CMakeLists.txt
rpp_ws/src/drivers/wheeltec_mic/wheeltec_mic_ros2/config/msc/res/asr/GrmBuilld/temp/: call.g  call_16K
rpp_ws/src/drivers/wheeltec_mic/wheeltec_mic_ros2/include/: user_interface.h
rpp_ws/src/drivers/wheeltec_mic/wheeltec_mic_ros2/launch/: mic_init.launch.py
rpp_ws/src/drivers/wheeltec_mic/wheeltec_mic_ros2/src/: wheeltec_mic.cpp
rpp_ws/src/tools/ira_laser_tools/: CMakeLists.txt
rpp_ws/src/tools/ira_laser_tools/include/ira_laser_tools/: laserscan_multi_merger.hpp
rpp_ws/src/tools/ira_laser_tools/launch/: laserscan_multi_merger.launch
rpp_ws/src/tools/ira_laser_tools/src/: laserscan_multi_merger.cpp
rpp_ws/src/tools/lidar_clipping/: CMakeLists.txt
rpp_ws/src/tools/lidar_clipping/config/: config.yaml
rpp_ws/src/tools/lidar_clipping/launch/: lidar_clipping.launch.py
rpp_ws/src/tools/lidar_clipping/src/: lidar_clipping.cpp
(+4131 files in other folders)
