<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rpp_ros_driver</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="shaojiale@robotplusplus.com.cn">sjl</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>rpp_msgs</depend>
  <depend>rpp_driver</depend>


  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
